update response schema generator
ec2-18-140-198-172.ap-southeast-1.compute.amazonaws.com
