# api.yaml
@@ -26,6 +26,51 @@ paths:
           content:
             application/json:
               schema:
+                items:
+                  type: object
+                  properties:
+                    Email:
+                      type: string
+                      default: String
+                    ID:
+                      type: number
+                      default: 1
+                    Name:
+                      type: string
+                      default: Author 1
+                    Users:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          ID:
+                            type: number
+                            default: 1
+                          Name:
+                            type: string
+                            default: User 1
+                          Profile:
+                            type: object
+                            properties:
+                              ID:
+                                type: number
+                                default: 1
+                              Name:
+                                type: string
+                                default: Profile 1
+                type: array
+        "300":
+          description: Response for status code 300
+          content:
+            application/json:
+              schema:
+                default: Redirect
+                type: string
+        "400":
+          description: Response for status code 400
+          content:
+            application/json:
+              schema:
                 properties:
                   items:
                     type: object
@@ -73,94 +118,3 @@ paths:
                     type: number
                     default: 500
                 type: object
-    get:
-      operationId: get
-      tags:
-      - Authors
-      summary: get
-      description: Get list author
-      responses:
-        "200":
-          description: Response for status code 200
-          content:
-            application/json:
-              schema:
-                properties:
-                  items:
-                    type: object
-                    properties:
-                      ID:
-                        type: number
-                        default: 1
-                      Name:
-                        type: string
-                        default: Author 1
-                      Users:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            ID:
-                              type: number
-                              default: 1
-                            Name:
-                              type: string
-                              default: User 1
-                            Profile:
-                              type: object
-                              properties:
-                                ID:
-                                  type: number
-                                  default: 1
-                                Name:
-                                  type: string
-                                  default: Profile 1
-                      author:
-                        type: object
-                        properties:
-                          ID:
-                            type: number
-                            default: 1
-                          Name:
-                            type: string
-                            default: Author 1
-                          book:
-                            type: object
-                            properties:
-                              ID:
-                                type: number
-                                default: 1
-                              Name:
-                                type: string
-                                default: Book 1
-                              category:
-                                type: object
-                                properties:
-                                  ID:
-                                    type: number
-                                    default: 1
-                                  Name:
-                                    type: string
-                                    default: Category 1
-                type: object
-        "500":
-          description: Response for status code 500
-          content:
-            application/json:
-              schema:
-                properties:
-                  error:
-                    type: string
-                    default: Internal Server Error
-                  status_code:
-                    type: number
-                    default: 500
-                type: object
-      parameters:
-      - description: Limit
-        in: query
-        name: limit
-        required: false
-        schema:
-          default: 10
-          type: integer
